2009-03-01 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-object-action.c (ifactory_object_read_done):
	Force toolbar label to be the same that action one if flag is set to true.

	* src/api/na-object-api.h: Fix minor typo.

2009-02-28 Pierre Wieser <pwieser@trychlos.org>

	* src/io-desktop/nadp-desktop-file.c
	(nadp_desktop_file_get_key_file_path):
	No more invalidate the function.

	* src/api/na-ifactory-object.h:
	* src/core/na-object-item-factory.c:
	* src/nact/nact-iactions-list-bis.c:
	* src/nact/nact-iactions-list.h:
	Fix minor typo.

	* src/api/na-object-api.h:
	New na_object_copy macro (evaluates as na_object_object_copy).

	* src/api/na-object-item.h (na_object_item_copy): Removed function.

	* src/api/na-object.h:
	* src/core/na-object.c:.
	(copy): Add 'recursive' flag.
	(iduplicable_copy): Use na_object_copy() macro.
	(na_object_object_copy): New function.

	* src/core/na-factory-object.c (na_factory_object_copy):
	No more delete all NADataBoxed, but update those who already exist.
	(write_data_iter): Fix return code.

	* src/core/na-iduplicable.c (na_iduplicable_duplicate):
	Review the rationale, and ensure that the function is recursive.

	* src/core/na-object-action.c
	* src/core/na-object-item.c:
	* src/core/na-object-menu.c:
	* src/core/na-object-profile.c:
	(instance_constructed): Removed function.
	(ifactory_object_copy): Removed function.
	(object_copy): New function, implementation of NAObject::copy.

	* src/core/na-pivot.c (instance_dispose): Add debug message.

	* src/core/na-updater.c (na_updater_remove_item):
	Only update tree if object has no parent.

	* src/io-gconf/nagp-gconf-provider.c
	(ifactory_provider_iface_init): Address nagp_writer_write_start().

	* src/io-gconf/nagp-reader.c (nagp_reader_read_data): Comment debug message.

	* src/io-gconf/nagp-writer.c:
	* src/io-gconf/nagp-writer.h (nagp_writer_write_start): New function.
	Write the type of the NAObjectItem.
